<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:gravity="center_vertical"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/username"
            />
        <EditText
            android:inputType="text"
            android:id="@+id/txtUsername"
            android:layout_width="0dp"
            android:layout_weight="0.75"
            android:layout_height="32dp"
            android:gravity="center_vertical"
            android:background="@color/colorWhite"
            android:hint="@string/username_sign"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/password"/>
        <EditText
            android:inputType="textPassword"
            android:id="@+id/txtPassword"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:background="@color/colorWhite"
            android:hint="@string/password_sign"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginBottom="10dp">
        <TextView
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:layout_weight="0.25"
            android:gravity="center_vertical"
            android:textColor="#FFFFFF"
            android:text="@string/password"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/txtPasswordConfirm"
            android:layout_width="300dp"
            android:layout_height="32dp"
            android:layout_weight="0.75"
            android:gravity="center_vertical"
            android:background="@color/colorWhite"
            android:hint="@string/password_confirm"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sign_up"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="Memiliki akun?"/>
        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingLeft="10dp"
            android:textColor="#04EA00"
            android:text="@string/login"/>
    </LinearLayout>
</LinearLayout>